# twitchchat

./: .gitignore  Cargo.toml  README.md  appveyor.yml  rustfmt.toml
.circleci/: config,yml  config.yml
.github/: test-osx.yaml
.github/workflows/: dev.yaml  master.yml  rust.yml  test-osx.yaml
crates/ratelimit/: Cargo.toml
crates/tee/: Cargo.toml  LICENSE
crates/twitchchat/: Cargo.toml
crates/twitchchat/examples/: async_std_demo.rs  message_parse.rs  simple_bot.rs  tokio_demo.rs
crates/twitchchat/src/: channel.rs  commands.rs  encodable.rs  ext.rs  irc.rs  lib.rs  macros.rs  util.rs
crates/twitchchat/src/commands/: ban.rs  clear.rs  color.rs  command.rs  commercial.rs  emote_only.rs  followers.rs  followers_off.rs  help.rs  host.rs  join.rs  jtv_command.rs  me.rs  mods.rs  part.rs  ping.rs  privmsg.rs  r9k_beta_off.rs  raid.rs  raw.rs  register.rs  reply.rs  slow.rs  slow_off.rs  subscribers_off.rs  unban.rs  unhost.rs  unraid.rs  unvip.rs  vip.rs  vips.rs  whisper.rs
crates/twitchchat/src/decoder/: async.rs  error.rs  mod.rs
crates/twitchchat/src/encoder/: async.rs  mod.rs
crates/twitchchat/src/irc/: prefix.rs  tag_indices.rs
crates/twitchchat/src/maybe_owned/: mod.rs
crates/twitchchat/src/messages/: commands.rs  pong.rs  reconnect.rs  user_state.rs
crates/twitchchat/src/runner/: async_runner.rs  channel.rs  error.rs  identity.rs  mod.rs  rate_limit.rs  status.rs  timeout.rs  wait_for.rs  wait_for_ready.rs
crates/twitchchat/src/test/: conn.rs  mod.rs
crates/twitchchat/src/twitch/: badge.rs  capability.rs  color.rs  mod.rs  userconfig.rs
crates/twitchchat/src/writer/: mpsc_writer.rs
crates/twitchchat_async_io/: Cargo.toml
crates/twitchchat_async_io/src/: lib.rs
crates/twitchchat_async_net/: Cargo.toml
crates/twitchchat_async_net/src/: lib.rs
crates/twitchchat_async_std/: Cargo.toml
crates/twitchchat_async_std/src/: lib.rs
crates/twitchchat_smol/: Cargo.toml
crates/twitchchat_tokio/: Cargo.toml
crates/twitchchat_tokio/src/: lib.rs
crates/twitchchat_tokio02/: Cargo.toml
crates/twitchchat_tokio02/src/: lib.rs
examples/: Cargo.toml  async_io_demo.rs  async_net_demo.rs  async_std_demo.rs  client.rs  config.rs  demo.rs  filter.rs  handler.rs  message_parse.rs  parse.rs  retry.rs  select.rs  short.rs  simple.rs  simple_bot.rs  smol_demo.rs  threads.rs  tokio02_demo.rs  tokio_demo.rs  wait_to_join.rs
examples/include/: mod.rs
simple_event_map/: Cargo.toml  README.md
simple_event_map/src/: channel.rs  event_map.rs  iter.rs  lib.rs  stream.rs
src/: as_owned.rs  channel.rs  commands.rs  connect.rs  connector.rs  conversion.rs  decode.rs  decoder.rs  dispatcher.rs  encodable.rs  encode.rs  encoder.rs  error.rs  events.rs  ext.rs  internal.rs  irc.rs  lib.rs  macros.rs  maybe_owned.rs  messages.rs  parse.rs  rate_limit.rs  ratelimit.rs  register.rs  runner.rs  serde.rs  sync.rs  tags.rs  tee.rs  teereader.rs  teststream.rs  userconfig.rs  util.rs  validator.rs
src/client/: control.rs  dispatcher.rs  error.rs  event.rs  mod.rs  reader.rs  runner.rs  status.rs  stream.rs  writer.rs
src/commands/: ban.rs  clear.rs  color.rs  command.rs  commercial.rs  disconnect.rs  emote_only.rs  emote_only_off.rs  followers.rs  followers_off.rs  give_mod.rs  help.rs  host.rs  join.rs  jtv_command.rs  marker.rs  me.rs  mods.rs  part.rs  ping.rs  pong.rs  privmsg.rs  r9k_beta.rs  r9k_beta_off.rs  raid.rs  (+17 more)
twitchchat/: Cargo.toml  README.md
twitchchat/examples/: async_std_demo.rs  smol_demo.rs  tokio_demo.rs
twitchchat/src/: async_writer.rs  asynchronous.rs  channel.rs  commands.rs  connector.rs  decoder.rs  dispatcher.rs  encoder.rs  ext.rs  identity.rs  io.rs  irc.rs  lib.rs  macros.rs  messages.rs  rate_limit.rs  runner.rs  serde.rs  split.rs  stream.rs  sync.rs  tags.rs  timeout.rs  util.rs  wait_for.rs  writer.rs  ws.rs
twitchchat/src/commands/: ban.rs  clear.rs  color.rs  command.rs  commercial.rs  disconnect.rs  emote_only.rs  emote_only_off.rs  followers.rs  give_mod.rs  join.rs  jtv_command.rs  marker.rs  me.rs  mods.rs  part.rs  ping.rs  pong.rs  privmsg.rs  r9k_beta.rs  r9k_beta_off.rs  raid.rs  register.rs  reply.rs  slow.rs  slow_off.rs  subscribers.rs  subscribers_off.rs  timeout.rs  unban.rs  unhost.rs  unmod.rs  untimeout.rs  unvip.rs  whisper.rs
twitchchat/src/connector/: async_io.rs  async_std.rs  smol.rs  tokio.rs
twitchchat/src/decoder/: async.rs  async_decoder.rs  decoder.rs  error.rs  mod.rs  stream_decoder.rs  sync.rs
twitchchat/src/dispatcher/: async_dispatcher.rs  mod.rs  sync_dispatcher.rs
twitchchat/src/encoder/: async.rs  mod.rs  sink.rs  sync.rs
twitchchat/src/handshake/: asynchronous.rs  error.rs  mod.rs  stream.rs  sync.rs
twitchchat/src/irc/: error.rs  message.rs  parser.rs  prefix.rs  tag_indices.rs  tags.rs
twitchchat/src/maybe_owned/: into_owned.rs  maybe_owned_index.rs  mod.rs
twitchchat/src/messages/: all_commands.rs  cap.rs  clear_chat.rs  clear_msg.rs  commands.rs  global_user_state.rs  host_target.rs  irc_ready.rs  join.rs  notice.rs  part.rs  ping.rs  pong.rs  privmsg.rs  ready.rs  reconnect.rs  room_state.rs  user_notice.rs  user_state.rs  whisper.rs
twitchchat/src/runner/: async_runner.rs  error.rs  mod.rs  rate_limit.rs  reset.rs  retry.rs  status.rs  timeout.rs  wait_for.rs  wait_for_ready.rs  ws.rs
twitchchat/src/test/: dummy.rs  mod.rs  tags_builder.rs
twitchchat/src/twitch/: badge.rs  capability.rs  color.rs  emotes.rs  extension.rs  handler.rs  mod.rs  userconfig.rs
twitchchat/src/twitch/commands/: clearchat.rs  hosttargetstart.rs  tests.rs  usernotice.rs
twitchchat/src/writer/: async_writer.rs  mod.rs  mpsc_writer.rs
twitchchat/t_examples/: parse.rs
twitchchat_async_io/: Cargo.toml
twitchchat_async_io/src/: lib.rs
twitchchat_async_net/: Cargo.toml
twitchchat_async_net/src/: lib.rs
twitchchat_async_std/: Cargo.toml
twitchchat_async_std/src/: lib.rs
twitchchat_smol/: Cargo.toml
twitchchat_tokio/: Cargo.toml
twitchchat_tokio02/: Cargo.toml
twitchchat_tokio02/src/: lib.rs
twitchchat_tungstenite/: Cargo.toml
twitchchat_tungstenite/src/: lib.rs
(+288 files in other folders)
