[package]
name          = "twitchchat"
edition       = "2018"
version       = "0.12.0-alpha.1"
authors       = ["museun <museun@outlook.com>"]
keywords      = ["twitch", "irc", "async", "asynchronous", "tokio"]
license       = "MIT OR Apache-2.0"
readme        = "README.md"
description   = "interface to the irc-side of twitch's chat system"
documentation = "https://docs.rs/twitchchat/latest/twitchchat/"
repository    = "https://github.com/museun/twitchchat"
categories    = ["asynchronous", "network-programming", "parser-implementations"]

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
all-features = true

[dependencies]
# logging support
log = "0.4.11"

# just the futures traits
futures-lite = "0.1.11"

# field pin projection
pin-project-lite = "0.1.7"

# cloneable async writes
async-dup = "1.2.1"

# message passing
async-channel = "1.4.0"

# for timing out futures
futures-timer = "3.0.2"

# for 'fairness' in the main loop
fastrand = "1.3.4"

# serializion/deserializion support
serde = { version = "1.0.115", optional = true, features = ["derive"] }

# optional runtimes (for TcpStream)
# these use the futures AsyncWrite+AsyncRead
async-io  = { version = "0.1.11", optional = true }
smol      = { version = "0.3.3", optional = true }
async-tls = { version = "0.9.0", default-features = false, features = ["client"], optional = true } 
# TODO look into what their features do. the ones they have enabled by default seem important
async-std = { version = "1.6.3", optional = true }

# tokio has its own AsyncWrite+AsyncRead
tokio            = { version = "0.2.22", features = ["net"], optional = true } 
tokio-util       = { version = "0.3.1", features = ["compat"], optional = true }

tokio-rustls     = { version = "0.14.0", optional = true }
webpki-roots     = { version = "0.20.0", optional = true }

tokio-native-tls = { version = "0.1.0", optional = true }
native-tls       = { version = "0.2.4", optional = true }

[dev-dependencies]
anyhow         = "1.0.32"
async-executor = { version = "0.1.2", default-features = false }
serde_json     = { version = "1.0.57", default-features = false, features = ["alloc"] }
rmp-serde      = "0.14.4"

[[example]]
name = "message_parse"

[[example]]
name = "smol_demo"
required-features = ["smol"]

[[example]]
name = "async_io_demo"
required-features = ["async-io"]

[[example]]
name = "async_std_demo"
required-features = ["async-std", "async-std/attributes"]

[[example]]
name = "tokio_demo"
required-features = ["tokio/full", "tokio-util"]

[[example]]
name = "simple_bot"
required-features = ["smol"]
