[package]
name = "examples"
version = "0.0.0"
edition = "2018"
publish = false


[dev-dependencies]
twitchchat = { version = "0.14", path = "../crates/twitchchat", features = ["async"] }

twitchchat_async_io  = { version = "0.1", path = "../crates/twitchchat_async_io" }
twitchchat_async_net = { version = "0.1", path = "../crates/twitchchat_async_net" }
twitchchat_async_std = { version = "0.1", path = "../crates/twitchchat_async_std" }
twitchchat_smol      = { version = "0.1", path = "../crates/twitchchat_smol" }
twitchchat_tokio     = { version = "0.1", path = "../crates/twitchchat_tokio" }
twitchchat_tokio02   = { version = "0.1", path = "../crates/twitchchat_tokio02" }

anyhow = "1.0.33"
async-executor = "1.3.0"
futures-lite = "1.11.1"

# the various runtimes
tokio     = { version = "0.3.0", features = ["full", "macros"] }
tokio02   = { version = "0.2.22", features = ["full", "macros"], package = "tokio" }
async-std = { version = "1.6.5", features = ["attributes"] }
smol      = "1.2.4"
async-net = "1.4.7"
async-io  = "1.1.10"


[[example]]
name = "message_parse"
path = "message_parse.rs"

[[example]]
name = "smol_demo"
path = "smol_demo.rs"

[[example]]
name = "async_io_demo"
path = "async_io_demo.rs"

[[example]]
name = "async_std_demo"
path = "async_std_demo.rs"

[[example]]
name = "tokio_demo"
path = "tokio_demo.rs"

[[example]]
name = "tokio02_demo"
path = "tokio02_demo.rs"

[[example]]
name = "simple_bot"
path = "simple_bot.rs"
