[package]
name          = "simple_event_map"
version       = "0.2.0"
authors       = ["museun <museun@outlook.com>"]
edition       = "2018"
license       = "MIT OR Apache-2.0"
readme        = "README.md"
keywords      = ["channel", "events", "async"]
categories    = ["concurrency"]
description   = "a simple event map based on channels, provides a receiver that is either blocking or async"
repository    = "https://github.com/museun/twitchchat/simple_event_map"
documentation = "https://docs.rs/simple_event_map"

[dependencies]
async-channel    = "1.4"
pin-project-lite = "0.1"
futures-lite     = "0.1"
