[package]
name          = "twitchchat"
edition       = "2018"
version       = "0.11.8"
authors       = ["museun <museun@outlook.com>"]
keywords      = ["twitch", "irc", "async", "asynchronous", "tokio"]
license       = "MIT OR Apache-2.0"
readme        = "README.md"
description   = "interface to the irc-side of twitch's chat system"
documentation = "https://docs.rs/twitchchat/latest/twitchchat/"
repository    = "https://github.com/museun/twitchchat"
categories    = ["asynchronous", "network-programming", "parser-implementations"]

[package.metadata.docs.rs]
features     = ["default"]
rustdoc-args = ["--cfg", "docsrs"]

[features]

[dependencies]
# logging support
log = "0.4.11"

# event dispatching
simple_event_map = { path = "../simple_event_map" }

# serializion/deserializion support
serde = { version = "1.0.115", optional = true, features = ["derive"] }

# just the futures traits
futures-lite = "0.1.10"

# field pin projection
pin-project-lite = "0.1.7"

# cloneable async writes
async-dup = "1.2.1"

# message passing
async-channel = "1.4.0"

# for timing out futures
futures-timer = "3.0.2"

# async mutex
async-mutex = "1.1.5"

# for 'fairness' in the main loop
fastrand = "1.3.4"

# optional runtimes (for TcpStream)
# these use the futures AsyncWrite+AsyncRead
async-io  = { version = "0.1.11", optional = true }
smol      = { version = "0.3.3", optional = true }
async-tls = { version = "0.9.0", default-features = false, features = ["client"], optional = true } 
# TODO look into what their features do. the ones they have enabled by default seem important
async-std = { version = "1.6.2", optional = true }

# tokio has its own AsyncWrite+AsyncRead
tokio        = { version = "0.2.22", features = ["net"], optional = true } 
tokio-util   = { version = "0.3.1", features = ["compat"], optional = true }
tokio-rustls = { version = "0.14.0", optional = true }
webpki-roots = { version = "0.20.0", optional = true }

[dev-dependencies]
doc-comment    = "0.3.3"
serde_json     = "1.0.57"
async-io       = "0.1.11"
alto_logger    = "0.3.6"
async-executor = "0.1.2"

[[example]]
name = "message_parse"

[[example]]
name = "smol_demo"
required-features = ["smol"]

[[example]]
name = "async_std_demo"
required-features = ["async-std", "async-std/attributes"]

[[example]]
name = "tokio_demo"
required-features = ["tokio/full", "tokio-util"]
