[package]
name          = "twitchchat"
edition       = "2018"
version       = "0.14.5"
authors       = ["museun <museun@outlook.com>"]
keywords      = ["twitch", "irc", "async", "asynchronous", "tokio"]
license       = "MIT OR Apache-2.0"
readme        = "README.md"
description   = "interface to the irc-side of twitch's chat system"
documentation = "https://docs.rs/twitchchat/latest/twitchchat/"
repository    = "https://github.com/museun/twitchchat"
categories    = ["asynchronous", "network-programming", "parser-implementations"]

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
all-features = true

[features]
default = []
writer  = ["flume"]
async   = ["flume/async", "futures-lite"]
ws      = ["soketto", "futures-lite"]

[dependencies]
# logging support
log = { version = "0.4.11", features = ["std"] }

# just the futures traits
futures-lite = { version = "1.11.1", optional = true }

# for optional serialization and deserialization
serde = { version = "1.0.117", features = ["derive"], optional = true }

# for message passing -- we'll use std channels for non-async code
# TODO don't expose this in the public api
flume = { version = "0.9.1", optional = true, default-features = false, package = "flume" }

# for websockets
soketto = { version = "0.4.2", optional = true }

[dev-dependencies]
anyhow         = "1.0.33"
async-executor = { version = "1.3.0", default-features = false }
serde_json     = "1.0.59"
rmp-serde      = "0.14.4"
async-net = "1.4.7"
async-tls = "0.10.0"

