[package]
name          = "twitchchat_async_io"
edition       = "2018"
version       = "0.1.0"
authors       = ["museun <museun@outlook.com>"]
keywords      = ["twitch", "irc", "async", "asynchronous"]
license       = "MIT OR Apache-2.0"
readme        = "README.md"
description   = "twitchchat connector using async_io"
documentation = "https://docs.rs/twitchchat_async_io/latest/twitchchat_async_io"
repository    = "https://github.com/museun/twitchchat"
categories    = ["asynchronous", "network-programming"]

[features]
rustls = ["async-tls"]

[dependencies]
twitchchat = "0.14.5"
async-io = "1.1.10"
async-tls = { version = "0.10.0", optional = true }

[dev-dependencies]
futures-io = "0.3.6"
