[package]
name          = "twitchchat_smol"
edition       = "2018"
version       = "0.1.0"
authors       = ["museun <museun@outlook.com>"]
keywords      = ["twitch", "irc", "async", "asynchronous", "smol"]
license       = "MIT OR Apache-2.0"
readme        = "README.md"
description   = "twitchchat connector using smol"
documentation = "https://docs.rs/twitchchat_smol/latest/twitchchat_smol/"
repository    = "https://github.com/museun/twitchchat"
categories    = ["asynchronous", "network-programming"]

[features]
rustls = ["async-tls"]

[dependencies]
twitchchat = "0.15"
smol = "1.2"
async-tls = { version = "0.10", optional = true }

[dev-dependencies]
futures-io = "0.3.6"
