[package]
name          = "twitchchat_tokio02"
edition       = "2018"
version       = "0.1.0"
authors       = ["museun <museun@outlook.com>"]
keywords      = ["twitch", "irc", "async", "asynchronous", "tokio"]
license       = "MIT OR Apache-2.0"
readme        = "README.md"
description   = "twitchchat connector using tokio 0.2"
documentation = "https://docs.rs/twitchchat_tokio02/latest/twitchchat_tokio02/"
repository    = "https://github.com/museun/twitchchat"
categories    = ["asynchronous", "network-programming"]

[features]
rustls = ["tokio-rustls", "webpki-roots"]
native_tls = ["tokio-native-tls", "native-tls"]
openssl = ["tokio-openssl", "openssl10"]

[dependencies]
twitchchat = "0.14"

tokio = { version = "0.2", features = ["net"] }
tokio-util = { version = "0.3", features = ["compat"] }

tokio-rustls = { version = "0.14", optional = true }
webpki-roots = { version = "0.20", optional = true }

tokio-native-tls = { version = "0.1", optional = true }
native-tls = { version = "0.2", optional = true }

tokio-openssl = { version = "0.4", optional = true }
openssl10 = { version = "0.10", optional = true, features = ["v111"], package = "openssl" }

[dev-dependencies]
futures-io = "0.3.6"
