[package]
name          = "twitchchat"
edition       = "2018"
version       = "0.14.5"
authors       = ["museun <museun@outlook.com>"]
keywords      = ["twitch", "irc", "async", "asynchronous", "tokio"]
license       = "MIT OR Apache-2.0"
readme        = "README.md"
description   = "interface to the irc-side of twitch's chat system"
documentation = "https://docs.rs/twitchchat/latest/twitchchat/"
repository    = "https://github.com/museun/twitchchat"
categories    = ["asynchronous", "network-programming", "parser-implementations"]

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
all-features = true

[features]
default = []
testing = [
    "async",
    "async-mutex",    
]

async = [
    "async-channel",
    "async-dup",
    "fastrand",
    "futures-lite",
    "futures-timer",
    "log",
    "pin-project-lite",
]

[dependencies]
# logging support
log = { version = "0.4.11", optional = true, features = ["std"] }

# just the futures traits
futures-lite = { version = "1.11.1", optional = true }

# field pin projection
pin-project-lite = { version = "0.1.10", optional = true }

# cloneable async writes
async-dup = { version = "1.2.2", optional = true }

# message passing
async-channel = { version = "1.5.1", optional = true }

# for timing out futures
futures-timer = { version = "3.0.2", optional = true }

# for 'fairness' in the main loop
fastrand = { version = "1.4.0", optional = true }

# for optional serialization and deserialization
serde = { version = "1.0.117", features = ["derive"], optional = true }

# for some test utilities
async-mutex = { version = "1.4.0", optional = true }

[dev-dependencies]
anyhow         = "1.0.33"
async-executor = { version = "1.3.0", default-features = false }
serde_json     = "1.0.59"
rmp-serde      = "0.14.4"

[[example]]
name = "message_parse"
required-features = ["async"]

# [[example]]
# name = "smol_demo"
# required-features = ["smol", "async"]

# [[example]]
# name = "async_io_demo"
# required-features = ["async-io", "async"]

# [[example]]
# name = "async_std_demo"
# required-features = ["async-std", "async-std/attributes", "async"]

# [[example]]
# name = "tokio_demo"
# required-features = ["tokio/full", "tokio-util", "async"]

# [[example]]
# name = "simple_bot"
# required-features = ["smol", "async"]
