[package]
name = "twitchchat_async_io"
version = "0.1.0"
authors = ["museun <museun@outlook.com>"]
edition = "2018"

[features]
rustls = ["async-tls"]

[dependencies]
twitchchat = "0.14.5"
async-io = "1.1.10"
async-tls = { version = "0.10.0", optional = true }

[dev-dependencies]
futures-io = "0.3.6"
