[package]
name = "twitchchat_async_net"
version = "0.1.0"
authors = ["museun <museun@outlook.com>"]
edition = "2018"

[features]
rustls = ["async-tls"]

[dependencies]
twitchchat = "0.14.5"
async-net = "1.4.7"
async-tls = { version = "0.10.0", optional = true }

[dev-dependencies]
futures-io = "0.3.6"
