[package]
name = "twitchchat_tokio"
version = "0.1.0"
authors = ["museun <museun@outlook.com>"]
edition = "2018"

[features]
rustls = ["tokio-rustls", "webpki-roots"]
native_tls = ["tokio-native-tls", "native-tls"]
openssl = ["tokio-openssl", "openssl10"]

[dependencies]
twitchchat = "0.14.5"
tokio = { version = "0.3.0", features = ["net"] }
tokio-util = { version = "0.4.0", features = ["compat"] }

tokio-rustls = { version = "0.20.0", optional = true }
webpki-roots = { version = "0.20.0", optional = true }

tokio-native-tls = { version = "0.2.0", optional = true }
native-tls = { version = "0.2.4", optional = true }

tokio-openssl = { version = "0.5.0", optional = true }
openssl10 = { version = "0.10.30", optional = true, features = ["v111"], package = "openssl" }

[dev-dependencies]
futures-io = "0.3.6"
